@@ -34,7 +34,7 @@ Application Framework.</description>
   <api>beta</api>
  </stability>
  <license uri="http://www.gnu.org/copyleft/lesser.html">LGPL</license>
- <notes>
+ <notes>* Add cache support for themes.
 * Add Horde_Session.
 * Add Horde::addInlineJsVars().
 * Remove Horde::nocacheUrl() and Horde::url() (Ticket #9160).
@@ -164,6 +164,7 @@ Application Framework.</description>
        <file name="ShareBase.php" role="php" />
        <file name="Template.php" role="php" />
        <file name="TextFilter.php" role="php" />
+       <file name="ThemesBuild.php" role="php" />
        <file name="Token.php" role="php" />
        <file name="Tree.php" role="php" />
        <file name="Twitter.php" role="php" />
@@ -258,6 +259,7 @@ Application Framework.</description>
       <file name="Files.php" role="php" />
      </dir> <!-- /lib/Horde/Script -->
      <dir name="Themes">
+      <file name="Build.php" role="php" />
       <file name="Css.php" role="php" />
       <file name="Element.php" role="php" />
       <file name="Image.php" role="php" />
@@ -784,6 +786,7 @@ Application Framework.</description>
    <install as="Horde/Core/Factory/ShareBase.php" name="lib/Horde/Core/Factory/ShareBase.php" />
    <install as="Horde/Core/Factory/Template.php" name="lib/Horde/Core/Factory/Template.php" />
    <install as="Horde/Core/Factory/TextFilter.php" name="lib/Horde/Core/Factory/TextFilter.php" />
+   <install as="Horde/Core/Factory/ThemesBuild.php" name="lib/Horde/Core/Factory/ThemesBuild.php" />
    <install as="Horde/Core/Factory/Token.php" name="lib/Horde/Core/Factory/Token.php" />
    <install as="Horde/Core/Factory/Tree.php" name="lib/Horde/Core/Factory/Tree.php" />
    <install as="Horde/Core/Factory/Twitter.php" name="lib/Horde/Core/Factory/Twitter.php" />
@@ -828,6 +831,7 @@ Application Framework.</description>
    <install as="Horde/Registry/Application.php" name="lib/Horde/Registry/Application.php" />
    <install as="Horde/Registry/Caller.php" name="lib/Horde/Registry/Caller.php" />
    <install as="Horde/Script/Files.php" name="lib/Horde/Script/Files.php" />
+   <install as="Horde/Themes/Build.php" name="lib/Horde/Themes/Build.php" />
    <install as="Horde/Themes/Css.php" name="lib/Horde/Themes/Css.php" />
    <install as="Horde/Themes/Element.php" name="lib/Horde/Themes/Element.php" />
    <install as="Horde/Themes/Image.php" name="lib/Horde/Themes/Image.php" />
