@@ -53,8 +53,8 @@ $layout_html = $view->toHtml();
 
 $css = $injector->getInstance('Horde_Themes_Css');
 foreach ($view->getApplications() as $app) {
-    foreach ($css->getStylesheets('', array('app' => $app)) as $f => $u) {
-        $css->addStylesheet($f, $u);
+    foreach ($css->getStylesheets('', array('app' => $app)) as $val) {
+        $css->addStylesheet($val['fs'], $val['uri']);
     }
 }
 
